@@ -6,6 +6,8 @@ Version 2.9
 * Change the way an user view its answered question
 * Add how many achieves needs to gain a badge when viewing profile
 * [#251] Bug solved: 'Avoid to send empty answers!'
+* Move source code from GitLab to GitHub: https://github.com/pacoorozco/gamify
+* Change LICENSE from CC to GPL v2
 
 Version 2.8
 -----------
